[package]
name = "octo-budget-api"
version = "0.1.0"
authors = ["Aliaksandr Rahalevich <saksmlz@gmail.com>"]

[dependencies]
actix-web = "0.7"
actix = "*"
env_logger = "0.5"
frank_jwt = "3.0"
serde_json = "*"
failure = "0.1"
failure_derive = "0.1"
time = "0.1"
diesel = { version = "1.3", features = ["chrono", "postgres", "r2d2"], default-features = false }
dotenv = "0.13"
djangohashers = { version = "0.3", features = ["fpbkdf2"] }
r2d2 = "0.8"
serde = "*"
serde_derive = "*"
futures = "0.1"
lazy_static = "1.1"
bytes = "*"
validator_derive = "*"
validator = "*"
chrono = { version = "*", features = ["serde"] }
