[package]
name = "db_seed"
version = "0.1.0"
authors = ["Aliaksandr Rahalevich <saksmlz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "../models" }
read_input = "*"
djangohashers = "*"
derive_more = "*"

[dependencies.diesel]
features = ["numeric", "chrono", "postgres"]
version = "1.4"

[dependencies.chrono]
features = ["serde"]
version = "*"
