[package]
name = "models"
version = "0.1.0"
authors = ["Aliaksandr Rahalevich <saksmlz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
diesel = { version = "1.4", features = ["numeric", "chrono", "postgres"] }

[dependencies.bigdecimal]
version = "0.1.0" # must match version of diesel dependency
features = ["serde"]
