[package]
authors = ["Aliaksandr Rahalevich <saksmlz@gmail.com>"]
edition = "2018"
name = "octo-budget-api"
version = "0.1.0"

[dependencies]
actix = "*"
actix-web = { version = "1.0.0-rc", default_features = false }
actix-service = "0.4"
actix-http = "0.2.0"
actix-files = "0.1.0-beta.4"
actix-redis = { git = "https://github.com/actix/actix-redis", default_features = false }
actix-rt = "*"
bytes = "0.4"
dotenv = "0.13"
env_logger = "0.6"
failure = "0.1"
failure_derive = "0.1"
futures = { package = "futures", version = "0.1" }
futures03 = { package = "futures-preview", version = "0.3.0-alpha.16", features = ["compat"] }
lazy_static = "1.1"
redis-async = "0.4.5"
serde = "1"
serde_derive = "1"
url = "1"
log = "0.4"
r2d2 = "*"
octo-redis = { path = "../octo-redis" }

[dependencies.bigdecimal]
version = "0.0.14" # must match version of diesel dependency
features = ["serde"]

[dependencies.actix_web_async_compat]
git = "https://github.com/saks/actix_web_async_compat"

[dependencies.chrono]
features = ["serde"]
version = "*"

[dependencies.diesel]
features = ["numeric", "chrono", "postgres", "r2d2"]
version = "1.4"

[dependencies.djangohashers]
features = ["fpbkdf2"]
version = "1"

[dependencies.octo-budget-lib]
path = "../octo-budget-lib"

[dependencies.middlewares]
path = "../middlewares"

[dependencies.serde_json]
version = "1.0"

[dev-dependencies]
awc = "0.2.0"
actix-http-test = "0.2.0"
