[package]
authors = ["Aliaksandr Rahalevich <saksmlz@gmail.com>"]
edition = "2018"
name = "octo-budget-api"
version = "0.1.0"

[dependencies]
actix = "*"
actix-web = { version = "2.0", default_features = false }
actix-rt = "1.0"
actix-service = "*"
actix-http = "*"
actix-files = "*"
dotenv = "0.13"
env_logger = "0.6"
failure = "0.1"
futures = "*"
lazy_static = "1.1"
serde = { version = "1", features = ["derive"] }
url = "1"
log = "0.4"
r2d2 = "*"
models = { path = "../models" }

[dependencies.bigdecimal]
version = "0.1.0" # must match version of diesel dependency
features = ["serde"]

[dependencies.chrono]
features = ["serde"]
version = "*"

[dependencies.diesel]
features = ["numeric", "chrono", "postgres", "r2d2"]
version = "1.4"

[dependencies.djangohashers]
features = ["fpbkdf2"]
version = "1"

[dependencies.octo-budget-lib]
path = "../octo-budget-lib"

[dependencies.middlewares]
path = "../middlewares"

[dependencies.serde_json]
version = "1.0"

[dev-dependencies]
actix-http-test = "0.2"
redis = "*"
bytes = "0.4"
