[package]
name = "octo-budget-lib"
version = "0.1.0"
authors = ["Aliaksandr Rahalevich <saksmlz@gmail.com>"]
edition = "2018"

[dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
jsonwebtoken = { git = "https://github.com/azah/jsonwebtoken", brandh = "update-ring-dependency" }
time = "0.1"
failure = "0.1"
