[package]
name = "octo-redis"
version = "0.1.0"
authors = ["Aliaksandr Rahalevich <saksmlz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "*"
actix = "*"
redis = "*"
futures = "*"
futures03 = { package = "futures-preview", version = "0.3.0-alpha.19", features = ["compat"] }
backoff = "*"
tokio-codec = "*"
tokio-io = "*"
tokio-tcp = "*"
failure = "*"
actix-http = "0.2"
log = "*"
